--- a/app/views/front/modal/_product_rcmd.html.erb
+++ b/app/views/front/modal/_product_rcmd.html.erb
@@ -43,7 +43,7 @@
           </div>
           <div class="outlink">
             <div>
-              <a onclick="ga('send','event','recommend-head','outlink','<%=@input_record.id%>');" target="_blank"href="<%=@input_record.url%>">구매하러 가기</a>
+              <a onclick="ga('send','event','recommend-head','outlink','<%=@input_record.id%>');" target="_blank"href="<%=@input_record.url%>">자세히 보러가기</a>
             </div>
           </div>
         </div>
