--- a/app/views/front/modal/intro/_intro.html.erb
+++ b/app/views/front/modal/intro/_intro.html.erb
@@ -89,7 +89,7 @@
         else{
             category = data;
             $(".intro").modal('hide');
-            $(".contents-frame").load('/contents/item/?id='+category+'&hashtag='+styletag,function(){
+            $(".contents-frame").load('/contents/item/?color=&id='+category+'&hashtag='+styletag,function(){
                 $("#nudge-message").html(styletag+" 스타일의 "+category+" 오브제를 찾았습니다<br>멋진 마리아주를 완성할<br>추천 리스트까지 확인해 보세요");
                 $(".login-modal").modal('show');
                 <% if @test =='test'%>
