--- a/app/views/front/items/_notibar.html.erb
+++ b/app/views/front/items/_notibar.html.erb
@@ -7,7 +7,7 @@
 <div class="noti-button" style="width:19%;">
   <span class="pricebutton" onclick="price_filter()">가격필터</span>
 </div>
-<div class="price-range" style="display:nonela">
+<div class="price-range" style="display:none">
   <div class="price-range-header">
     <span>원하는 가격대 설정<br></span>
     <span>해당 범위 내의 상품들만 보여드립니다</span>
