--- a/app/views/front/items/_notibar.html.erb
+++ b/app/views/front/items/_notibar.html.erb
@@ -1,10 +1,10 @@
 
-<div class="noti-button" style="width:45%;">
+<div class="noti-button" style="width:60%;">
   <span class="sortbutton sort-active" sort_type="rating" sort_value="desc" onclick="filter_sort(this,'rating','desc');">인기순</span>
   <span class="sortbutton" sort_type="price" sort_value="desc" onclick="filter_sort(this,'price','desc');">고가순</span>
   <span class="sortbutton" sort_type="price" sort_value="asc" onclick="filter_sort(this,'price','asc');">저가순</span>
 </div>
-<div class="noti-button" style="width:19%;">
+<div class="noti-button" style="width:19%; display:none;">
   <span class="pricebutton" onclick="price_filter()">가격필터</span>
 </div>
 <div class="price-range" style="display:none">
