--- a/app/views/front/items/_notibar.html.erb
+++ b/app/views/front/items/_notibar.html.erb
@@ -4,27 +4,27 @@
   <span class="sortbutton" sort_type="price" sort_value="desc" onclick="filter_sort(this,'price','desc');">고가순</span>
   <span class="sortbutton" sort_type="price" sort_value="asc" onclick="filter_sort(this,'price','asc');">저가순</span>
 </div>
-<div class="noti-button" style="width:19%; display:none;">
-  <span class="pricebutton" onclick="price_filter()">가격필터</span>
-</div>
-<div class="price-range" style="display:none">
-  <div class="price-range-header">
-    <span>원하는 가격대 설정<br></span>
-    <span>해당 범위 내의 상품들만 보여드립니다</span>
-  </div>
-  <div class="range-bar">
-    <div class="slider-range">
-      <span>
-        <span class="price-from">500</span>원 ~<span class="price-to">10000</span>원
-      </span>
-    </div>
-    <div id="slider-range"></div>
-  </div>
-  <div class="price-range-button">
-    <div class="price-reset">초기화</div>
-    <div class="price-apply">적용하기</div>
-  </div>
-</div>
+<!--<div class="noti-button" style="width:19%; display:none;">-->
+  <!--<span class="pricebutton" onclick="price_filter()">가격필터</span>-->
+<!--</div>-->
+<!--<div class="price-range" style="display:none">-->
+  <!--<div class="price-range-header">-->
+    <!--<span>원하는 가격대 설정<br></span>-->
+    <!--<span>해당 범위 내의 상품들만 보여드립니다</span>-->
+  <!--</div>-->
+  <!--<div class="range-bar">-->
+    <!--<div class="slider-range">-->
+      <!--<span>-->
+        <!--<span class="price-from">500</span>원 ~<span class="price-to">10000</span>원-->
+      <!--</span>-->
+    <!--</div>-->
+    <!--<div id="slider-range"></div>-->
+  <!--</div>-->
+  <!--<div class="price-range-button">-->
+    <!--<div class="price-reset">초기화</div>-->
+    <!--<div class="price-apply">적용하기</div>-->
+  <!--</div>-->
+<!--</div>-->
 <div class="noti-button" onclick="prefer_reset();ga('send','event','filter','popup','notibar');" style="float:right;">
   <span>다시 설정하기</span>
 </div>
