--- a/app/views/front/items/_notibar.html.erb
+++ b/app/views/front/items/_notibar.html.erb
@@ -35,16 +35,16 @@
 
     //태그를 입력받는다 제이쿼리로 보낸다
     //제이슨으로 받아서 틀 하나 만들어두고 반복문으로 dom재생성한다
-    //아니면 아래 부분만 새로운 데이터로 리로드한다
-    var slider = document.getElementById('slider-range');
-    noUiSlider.create(slider, {
-        start: [0, 100],
-        connect: true,
-        range: {
-            'min': 0,
-            'max': 100
-        }
-    });
+//    //아니면 아래 부분만 새로운 데이터로 리로드한다
+//    var slider = document.getElementById('slider-range');
+//    noUiSlider.create(slider, {
+//        start: [0, 100],
+//        connect: true,
+//        range: {
+//            'min': 0,
+//            'max': 100
+//        }
+//    });
     var page = 1;
     var end_param = true;
     function prefer_reset(){
