--- a/app/views/front/db_spider.html.erb
+++ b/app/views/front/db_spider.html.erb
@@ -30,7 +30,7 @@
       <span style="font-size:1.2m; border:1px solid grey;"onclick="add_category()">카테고리 추가하기</span><br>
       <input id="album_css" type="text" name="album_css" placeholder="제품의 css 분류"><button onclick="check_go('album')" >확인하기</button>
     </p>
-    <p id=album_example style="color:grey; border:1px solid grey; width:90%; margin:auto;">이곳에 하나의 앨범박스의 예시가 표시됩니다</p>
+    <p id=album_example style="color:grey; border:1px solid grey; width:90%; margin:auto;">이곳에 하나의 앨범박스의 예시가 표시됩니다(인코딩 깨지는거 무시하세요</p>
 
   </div>
 
