--- a/app/views/front/db_spider_result.html.erb
+++ b/app/views/front/db_spider_result.html.erb
@@ -5,5 +5,7 @@
   <td><%=line[:price]%></td>
   <td><%=line[:url]%></td>
   <td><%=line[:img]%></td>
+  <td class="input_text"><input type="text" /></td>
+  <td class="img_print"><img src="<%=line[:img]%>"></td>
 </tr>
 <% end %>
