--- a/app/views/front/db_spider.html.erb
+++ b/app/views/front/db_spider.html.erb
@@ -49,7 +49,10 @@
   </div>
 
   <button style="height:100px; width:300px; border:solid 1px grey;" onclick="spider_go();">Go</button>
-
+</section>
+  <div style="text-align: center;">
+  <button onclick="$('section').toggle();">섹션 토글</button>
+  </div>
   <div style="width:100% text-align:center;">
     <div style="width:100%;">
     <table id="input" style="width:100%;">
@@ -76,12 +79,13 @@
       <th>가격</th>
       <th>상품url</th>
       <th>이미지</th>
+      <th>입력</th>
+      <th>이미지출력</th>
     </tr>
     </tbody>
   </table>
   </div>
   </div>
-</section>
 <script>
   function add_category(){
       $(".category_mom").append("      <input type=\"text\" class=\"album_category\"  placeholder=\"첫 페이지의 url\"><br>\n" +
