--- a/app/views/front/db_spider.html.erb
+++ b/app/views/front/db_spider.html.erb
@@ -1,5 +1,5 @@
 <section style="text-align:center; color:darkgreen;">
-  <div style="margin-top:10%;">
+  <div style="margin-top:3%;">
 
     <p>
       홈페이지 주소를 넣어주세요(shop들 모을때 DB에 등록한 주소)
@@ -78,7 +78,9 @@
       <th>가격</th>
       <th>상품url</th>
       <th>이미지</th>
-      <th>입력</th>
+      <th>색상</th>
+      <th>스타일</th>
+      <th>카테고리</th>
       <th>이미지출력</th>
     </tr>
     </tbody>
