--- a/app/views/front/db_spider_result.html.erb
+++ b/app/views/front/db_spider_result.html.erb
@@ -8,5 +8,6 @@
   <td></td>
   <td></td>
   <td class="img_print"><img src="<%=line[:img]%>"></td>
+  <td class="img_print2"><img src="<%=line[:img2]%>"></td>
 </tr>
 <% end %>
