--- a/app/views/front/db_spider.html.erb
+++ b/app/views/front/db_spider.html.erb
@@ -115,7 +115,7 @@
               "</td>" +
               "<td>" + encoding +
               "</td>" +
-              "<td>" + category.join() +
+              "<td>" + category.join('') +
               "</td>" +
               "<td>" +album_css +
               "</td>" +
