--- a/app/views/front/frame/_footer.html.erb
+++ b/app/views/front/frame/_footer.html.erb
@@ -4,19 +4,19 @@
 <div class="footer-button likeitemlist">
   <span class="glyphicon glyphicon-heart" name=likeitem onclick="section_transfer('likeitem');ga('send','event','section','move','likeitem');"></span>
 </div>
-<div class="footer-button homelist">
-  <span class="glyphicon glyphicon-send" name="home" onclick="section_transfer('home');ga('send','event','section','move','home');"></span>
-</div>
+<!--<div class="footer-button homelist">-->
+  <!--<span class="glyphicon glyphicon-send" name="home" onclick="section_transfer('home');ga('send','event','section','move','home');"></span>-->
+<!--</div>-->
 <div class="footer-button shoplist" >
   <span class="glyphicon glyphicon-home" name=shop onclick="section_transfer('shop');ga('send','event','section','move','shop');"></span>
 </div>
 <div class="footer-button likeshoplist">
   <span class="glyphicon glyphicon-star" name="likeshop" onclick="section_transfer('likeshop');ga('send','event','section','move','likeshop');"></span>
 </div>
-<div class="footer-alarm" style="display: none;" onclick="alarm_close(this);">
-  <div>특가할인정보</div>
-  <div></div>
-</div>
+<!--<div class="footer-alarm" style="display: none;" onclick="alarm_close(this);">-->
+  <!--<div>특가할인정보</div>-->
+  <!--<div></div>-->
+<!--</div>-->
 
 <script>
     function section_transfer(menu){
