--- a/app/views/front/items/_contents.html.erb
+++ b/app/views/front/items/_contents.html.erb
@@ -7,15 +7,15 @@
 <div class="body-divide">
   <% @product1.each do |record| %>
       <div class="modal-product-item">
-      <a id=item<%=record.id%> onclick="ga('send','event','recommend','popup','<%=record.id%>');product_rcmd_popup(<%=record.id%>)">
-          <img class="modal-product-img" src="<%=record.img_url%>" onerror="imgError(this,'product',<%= record.id%>)"/>
+      <a id=item<%=record.id%> onclick="ga('send','event','recommend','popup','<%=record.id%>');product_rcmd_popup(<%=record.id%>,'<%= record.merchant.title%>','<%=record.url%>')">
+        <img class="modal-product-img" src="<%=record.img_url%>" onerror="imgError(this,'product',<%= record.id%>)"/>
       </a>
       <% if !@userlikeitems.include?(record.id)%>
           <div name=likeitem<%=record.id%> class="likebutton-item" onclick="userlike(this,'item','<%= record.id%>');ga('send','event','product','like','<%=record.id%>');"></div>
       <% else %>
           <div name=likeitem<%=record.id%> class="likebutton-item likebutton-item-clicked" onclick="userlike(this,'item','<%= record.id%>');ga('send','event','product','like','<%=record.id%>');"></div>
       <% end %>
-        <a onclick="ga('send','event','recommend','popup','<%=record.id%>');product_rcmd_popup(<%=record.id%>)">
+        <a onclick="ga('send','event','recommend','popup','<%=record.id%>');product_rcmd_popup(<%=record.id%>,'<%= record.merchant.title%>','<%=record.url%>)')">
             <div class="modal-product-detail">
               <span><%=record.title%></span><br>
               <span class="product-price"><%=record.price.to_s.reverse.scan(/(?:\d*\.)?\d{1,3}-?/).join(',').reverse!%>원</span>
@@ -29,7 +29,7 @@
 <div class="body-divide">
   <% @product2.each do |record| %>
       <div class="modal-product-item">
-        <a id=item<%=record.id%> onclick="ga('send','event','recommend','popup','<%=record.id%>');product_rcmd_popup(<%=record.id%>)">
+        <a id=item<%=record.id%> onclick="ga('send','event','recommend','popup','<%=record.id%>');product_rcmd_popup(<%=record.id%>,'<%= record.merchant.title%>','<%=record.url%>')">
             <img class="modal-product-img" src="<%=record.img_url%>" onerror="imgError(this,'product',<%= record.id%>)"/>
         </a>
         <% if !@userlikeitems.include?(record.id)%>
@@ -37,7 +37,7 @@
         <% else %>
             <div name=likeitem<%=record.id%> class="likebutton-item likebutton-item-clicked" onclick="userlike(this,'item','<%= record.id%>');ga('send','event','product','like','<%=record.id%>');"></div>
         <% end %>
-        <a id=item<%=record.id%> onclick="ga('send','event','recommend','popup','<%=record.id%>');product_rcmd_popup(<%=record.id%>)">
+        <a id=item<%=record.id%> onclick="ga('send','event','recommend','popup','<%=record.id%>');product_rcmd_popup(<%=record.id%>,'<%= record.merchant.title%>','<%=record.url%>')">
             <div class="modal-product-detail">
                <span><%=record.title%></span><br>
                <span class="product-price"><%=record.price.to_s.reverse.scan(/(?:\d*\.)?\d{1,3}-?/).join(',').reverse!%>원</spanc>
