--- a/app/views/front/frame/_top_bar.html.erb
+++ b/app/views/front/frame/_top_bar.html.erb
@@ -1,5 +1,11 @@
-  <div class="itemfilter-button" onclick="item_filter_popup();ga('send','event','filter','popup','topbar');"></div>
-  <div class="itemsearch-button" onclick="item_search_toggle(true);ga('send','event','index','move','search');"></div>
-	<span class=service-title onclick="$('html, body').animate({ scrollTop: 0 }, 600);">사랑</span>
+  <!--<div class="itemfilter-button" onclick="item_filter_popup();ga('send','event','filter','popup','topbar');"></div>-->
+  <!--<div class="itemsearch-button" onclick="item_search_toggle(true);ga('send','event','index','move','search');">-->
+    <!--<span class="glyphicon glyphicon-heart" name=likeitem onclick="section_transfer('likeitem');ga('send','event','section','move','likeitem');"></span>-->
+  <!--</div>-->
+	<!--<span class=service-title onclick="$('html, body').animate({ scrollTop: 0 }, 600);">사랑</span>-->
+  <div class="search-input">
+    <input type="text" placeholder="검색어를 입력해주세요">
+    <i style="top:6px; left:0;font-size:1.2em;color:#a7c9a9;" class="glyphicon glyphicon-search form-control-feedback"></i>
+  </div>
 
 
