--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -157,7 +157,8 @@ a:active {color:inherit;}
 }
 .modal-product-item{
   background: white;
-  box-shadow:1px 1px 3px grey;
+  box-shadow:1px 1px 1px 1px rgba(0,0,0,0.2);
+  border-radius:3px;
   width:96%;
   margin:5% 1% 5% 1%;
   min-height:30%;
@@ -166,6 +167,7 @@ a:active {color:inherit;}
 
 .modal-product-img{
   width:100%;
+  border-radius:3px 3px 0 0;
 }
 
 .likebutton-item{
@@ -276,9 +278,10 @@ display:table;
 width:100%;
 height:44px;
 text-align:center;
-background-color: rgb(201,201,201);
+background-color: white;
 margin-bottom:1%;
 position:fixed;
+padding:6.5px;
 top:0;
 z-index: 10;
 box-shadow: 0px 0px 1px grey;
@@ -353,9 +356,9 @@ box-shadow: 0px 0px 1px grey;
   height:100%;
   background-clip:padding-box;
   border:rgba(0,0,0,0.2) 1px solid;
-  border-radius:6px;
-  -moz-border-radius: 6px;
-  -webkit-border-radius: 6px;
+  border-radius:3px;
+  -moz-border-radius: 3px;
+  -webkit-border-radius: 3px;
   float:left;
   display: table;
   margin-right:1%;
@@ -373,12 +376,12 @@ box-shadow: 0px 0px 1px grey;
   color:white;
 }
 .noti-button>span:first-child{
-  border-top-left-radius:5px;
-  border-bottom-left-radius:5px;
+  border-top-left-radius:3px;
+  border-bottom-left-radius:3px;
 }
 .noti-button>span:last-child{
-  border-top-right-radius:5px;
-  border-bottom-right-radius:5px;
+  border-top-right-radius:3px;
+  border-bottom-right-radius:3px;
 }
 .sort-active{
   background: #a7c9a9!important;
@@ -461,9 +464,10 @@ box-shadow: 0px 0px 1px grey;
 .search-input>input{
   width: 100%;
   height: 100%;
-  border: none;
+  border: rgba(0,0,0,0.2);
+  border-radius:3px;
   text-align: center;
-  box-shadow: inset 1px 1px 3px 0px grey;
+
 }
 .search-submit{
   float:left;
